<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calibrate.CalibrateScaleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cal_scale_select_scale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/cal_scale_rg_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <RadioButton
                android:id="@+id/cal_scale_rb_unit_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal_scale_unit1" />

            <RadioButton
                android:id="@+id/cal_scale_rb_unit_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal_scale_unit2" />

            <RadioButton
                android:id="@+id/cal_scale_rb_unit_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cal_scale_unit3" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/cal_scale_ll_select_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cal_scale_rg_unit"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="invisible"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cal_scale_select_scale2"/>

            <RadioGroup
                android:id="@+id/cal_scale_rg_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/cal_scale_rb_scale1000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cal_scale_scale1000" />

                <RadioButton
                    android:id="@+id/cal_scale_rb_scale5000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cal_scale_scale5000" />

                <RadioButton
                    android:id="@+id/cal_scale_rb_scale10000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cal_scale_scale10000" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cal_scale_ll_select_scale">

            <LinearLayout
                android:id="@+id/cal_scale_ll_step1"
                style="@style/Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cal_scale_step1" />

                <Button
                    android:id="@+id/cal_scale_btn_step1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cal_scale_next" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cal_scale_ll_step2"
                style="@style/Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cal_scale_enter_weight" />

                <EditText
                    android:id="@+id/cal_scale_te_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cal_scale_step2" />

                <Button
                    android:id="@+id/cal_scale_btn_step2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cal_scale_next" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cal_scale_ll_step3"
                style="@style/Box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical"
                android:visibility="gone">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cal_scale_ll_loading">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cal_scale_weight" />

                    <TextView
                        android:id="@+id/cal_scale_tv_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_box_green"
                        android:text="" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cal_scale_fine_adjustment" />

                    <TextView
                        android:id="@+id/cal_scale_tv_factor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_box_green"
                        android:text="" />

                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:justifyContent="space_evenly">

                        <TextView
                            android:id="@+id/cal_scale_tv_addfactor_m100"
                            style="@style/GreenButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cal_scale_fine_adjustment_m100" />

                        <TextView
                            android:id="@+id/cal_scale_tv_addfactor_m10"
                            style="@style/GreenButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cal_scale_fine_adjustment_m10" />

                        <TextView
                            android:id="@+id/cal_scale_tv_addfactor_p10"
                            style="@style/GreenButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cal_scale_fine_adjustment_p10" />

                        <TextView
                            android:id="@+id/cal_scale_tv_addfactor_p100"
                            style="@style/GreenButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cal_scale_fine_adjustment_p100" />
                    </com.google.android.flexbox.FlexboxLayout>
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cal_scale_step3" />

                <Button
                    android:id="@+id/cal_scale_btn_step3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cal_scale_finish" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cal_scale_ll_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:gravity="center"
            android:visibility="gone"
            >

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lade..." />
        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>